--- a/media/css/impala/moz-tab.css
+++ b/media/css/impala/moz-tab.css
@@ -12,8 +12,3 @@
     color: #fff;
 }
 
-/* Temp fix while mozorg.cdn.mozilla.net/media/css/tabzilla-min.css has a
-#tabzilla {z-index: 999} */
-#tabzilla {
-    z-index: inherit;
-}
